fix vscode and pinned label alignment

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body{
 }
 
 .pinnedlabel{
-  margin: 32.5px;
+  margin: 45px;
   margin-bottom: 0px;
   margin-top: -5px;
 }
